Adjust footer styling to prevent footer covering content on phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@ body {
 /* Footer */
 footer {
   margin-top: auto;
-  bottom: 0;
   width: 100%;
   background-color: var(--primary-color);
   top: 100%;
